Add GetCarsBodyType endpoint
